--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,26 @@
-.App {
-  text-align: center;
+body {
+  background-color: #eeee;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+form {
+  margin: 2rem;
+}
+input {
+  display: block;
+  margin: 1rem;
+}
+.btnFancy {
+  font-size: 1.5rem;
+  font-weight: bolder;
+  transition: all 0.2s linear;
+  border: 5px solid rgb(49, 144, 221);
+  background-color: rgb(255, 255, 255);
+  color: rgb(49, 144, 221);
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.btnFancy:hover {
+  transition: all 0.2s linear;
+  border: 5px solid rgb(255, 255, 255);
+  background-color: rgb(49, 144, 221);
+  color: rgb(255, 255, 255);
 }
